--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="letter__container">
         <div class="letters"></div>
         <button class="btn__search_letter">
-          <img src="./ikonice/search.svg" alt="" />
+          <img src="./ikonice/search-orange.svg" alt="" />
         </button>
       </div>
       <button class="icon__btn btn__nav_expand">
@@ -60,15 +60,17 @@
         <div class="hero__img_container">
           <img src="./slike/hero.svg" alt="" />
         </div>
-        <h2 class="hero__header">Тараба речник</h2>
-        <h3 class="hero__paragraph">
-          Тараба речник се бави страним речима у српском језику, давајући им
-          објашњење и алтернативу.
-        </h3>
-        <h3>Пратите нас на</h3>
-        <div class="socials__container">
-          <img src="./ikonice/instagram-square.svg" alt="" />
-          <img src="./ikonice/facebook-square.svg" alt="" />
+        <div class="hero__text_container">
+          <h2 class="hero__header">Тараба речник</h2>
+          <h3 class="hero__subheader">
+            Тараба речник се бави страним речима у српском језику, давајући им
+            објашњење и алтернативу.
+          </h3>
+          <h3 class="hero__subheader">Пратите нас на</h3>
+          <div class="socials__container">
+            <img src="./ikonice/instagram-square.svg" alt="" />
+            <img src="./ikonice/facebook-square.svg" alt="" />
+          </div>
         </div>
       </section>
       <!-- HERO SECTION END -->
