MEDIA QUERY 768PX

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="hero__text_container">
           <h2 class="hero__header">Тараба речник</h2>
-          <h3 class="hero__subheader">
+          <h3 class="hero__subheader subheader__first">
             Тараба речник се бави страним речима у српском језику, давајући им
             објашњење и алтернативу.
           </h3>
