--- a/index.html
+++ b/index.html
@@ -103,12 +103,8 @@
       <section class="last-added__section">
         <h2>Последње додате речи</h2>
         <div class="carousel__container">
-          <div class="carousel__card_container"></div>
-          <div class="dot__container">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
+          <div class="carousel__card_container lastAddedWords"></div>
+          <div class="dot__container"></div>
         </div>
       </section>
       <!-- LAST ADDED END -->
@@ -127,12 +123,8 @@
       <section class="frequently__section">
         <h2>Најчешће прегледане речи</h2>
         <div class="carousel__container">
-          <div class="carousel__card_container"></div>
-          <div class="dot__container">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
+          <div class="carousel__card_container freqWords"></div>
+          <div class="dot__container"></div>
         </div>
       </section>
       <!-- MOST FREQUENTLY SEARCHED END-->
