--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
-    <title>речник</title>
+    <title>речник - претрага</title>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,13 +29,6 @@
         </button>
       </div>
       <div class="header__nav">
-        <input
-          class="search-word hidden"
-          type="search"
-          id="search-word"
-          name="search-word"
-          placeholder="Укуцајте своју реч овде..."
-        />
         <button class="icon__btn btn__search">
           <img src="./ikonice/search.svg" alt="" />
         </button>
@@ -54,9 +47,7 @@
       <nav class="main__nav">
         <div class="nav__container">
           <div class="letter__container">
-            <div class="letters">
-              <!-- <a href="#" class="letter">А</a> -->
-            </div>
+            <div class="letters"></div>
             <button class="icon__btn btn__search_letter">
               <img src="./ikonice/search-orange.svg" alt="" />
             </button>
@@ -72,10 +63,10 @@
           </button>
           <ul class="links">
             <li>
-              <a href="#hero" class="link">Почетна</a>
+              <a href="index.html" class="link">Почетна</a>
             </li>
             <li>
-              <a href="search.html" class="link">Речник</a>
+              <a href="#vocabulary" class="link">Речник</a>
             </li>
             <li>
               <a href="#suggest" class="link">Предложи реч</a>
@@ -88,26 +79,6 @@
       </nav>
       <!-- NAVIGATION END-->
 
-      <!-- HERO SECTION -->
-      <section class="hero__section">
-        <div class="hero__img_container">
-          <img src="./slike/hero.svg" alt="" />
-        </div>
-        <div class="hero__text_container">
-          <h2 class="hero__header">Тараба речник</h2>
-          <h3 class="hero__subheader subheader__first">
-            Тараба речник се бави страним речима у српском језику, давајући им
-            објашњење и алтернативу.
-          </h3>
-          <h3 class="hero__subheader">Пратите нас на</h3>
-          <div class="socials__container">
-            <img src="./ikonice/instagram-square.svg" alt="" />
-            <img src="./ikonice/facebook-square.svg" alt="" />
-          </div>
-        </div>
-      </section>
-      <!-- HERO SECTION END -->
-
       <!-- LAST ADDED -->
       <section class="last-added__section">
         <h2>Последње додате речи</h2>
@@ -118,16 +89,6 @@
       </section>
       <!-- LAST ADDED END -->
 
-      <!-- SUGGEST WORD-->
-      <section class="suggest-word__section">
-        <h2>Буди слободан/на да нам предложиш реч</h2>
-        <p class="section__paragraph">
-          За предлог речи потребно је да имаш отворен налог
-        </p>
-        <button class="btn">Предложи реч</button>
-      </section>
-      <!-- SUGGEST WORD END -->
-
       <!-- MOST FREQUENTLY SEARCHED -->
       <section class="frequently__section">
         <h2>Најчешће прегледане речи</h2>
@@ -137,27 +98,6 @@
         </div>
       </section>
       <!-- MOST FREQUENTLY SEARCHED END-->
-
-      <!-- INSTAGRAM PAGE -->
-      <section class="instagram__section">
-        <div class="title__align">
-          <img
-            class="instagram__icon"
-            src="./ikonice/instagram-round.svg"
-            alt=""
-          />
-          <h2><a class="instagram__link" href="#">@taraba.rs</a> речник</h2>
-        </div>
-
-        <p class="section__paragraph">
-          Погледај како изгледа садржај на нашем Инстаграм профилу
-        </p>
-        <div class="img__container">
-          <img src="./slike/insta.pic.svg" alt="" />
-          <img src="./slike/insta.pic.svg" alt="" />
-        </div>
-      </section>
-      <!-- INSTAGRAM PAGE END-->
     </main>
 
     <!-- javascript -->
