--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           type="search"
           id="search-word"
           name="search-word"
-          placeholder="Укуцајте своју реч овде..."
+          placeholder="Унесите своју реч овде..."
         />
         <button class="icon__btn btn__search">
           <img src="./ikonice/search.svg" alt="" />
@@ -54,9 +54,7 @@
       <nav class="main__nav">
         <div class="nav__container">
           <div class="letter__container">
-            <div class="letters">
-              <!-- <a href="#" class="letter">А</a> -->
-            </div>
+            <div class="letters"></div>
             <button class="icon__btn btn__search_letter">
               <img src="./ikonice/search-orange.svg" alt="" />
             </button>
@@ -75,7 +73,7 @@
               <a href="#hero" class="link">Почетна</a>
             </li>
             <li>
-              <a href="search.html" class="link">Речник</a>
+              <a href="#dictionary" class="link">Речник</a>
             </li>
             <li>
               <a href="#suggest" class="link">Предложи реч</a>
@@ -161,6 +159,6 @@
     </main>
 
     <!-- javascript -->
-    <script src="script.js" type="module"></script>
+    <script src="./scripts/script.js" type="module"></script>
   </body>
 </html>
