--- a/index.html
+++ b/index.html
@@ -89,7 +89,16 @@
       <!-- HERO SECTION -->
       <section class="hero__section">
         <div class="hero__img_container">
-          <img src="./slike/hero.svg" alt="" />
+          <img
+            class="hero__img hero__img_light"
+            src="./slike/hero.svg"
+            alt=""
+          />
+          <img
+            class="hero__img hero__img_dark"
+            src="./slike/hero-dark-theme.svg"
+            alt=""
+          />
         </div>
         <div class="hero__text_container">
           <h2 class="hero__header">Тараба речник</h2>
