--- a/search.html
+++ b/search.html
@@ -92,8 +92,7 @@
           <h2>A</h2>
           <p class="num-of__words">(2)</p>
         </div>
-        <div class="words__container carousel__container">
-        </div>
+        <div class="words__container carousel__container"></div>
       </section>
 
       <!-- SUGGEST WORD-->
@@ -101,7 +100,7 @@
         <a href="#" class="suggest__link"><p>Предложи реч</p></a>
       </div>
       <!-- SUGGEST WORD END -->
-
+    </main>
     <!-- javascript -->
     <script src="./scripts/script-search.js" type="module"></script>
   </body>
