--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
           </button>
           <ul class="links">
             <li>
-              <a href="#hero" class="link">Почетна</a>
+              <a href="#" class="link">Почетна</a>
             </li>
             <li>
-              <a href="#dictionary" class="link">Речник</a>
+              <a href="#" class="link">Речник</a>
             </li>
             <li>
-              <a href="#suggest" class="link">Предложи реч</a>
+              <a href="#" class="link">Предложи реч</a>
             </li>
             <li>
-              <a href="#about" class="link">О речнику</a>
+              <a href="#" class="link">О речнику</a>
             </li>
           </ul>
         </div>
@@ -153,7 +153,10 @@
             src="./ikonice/instagram-round.svg"
             alt=""
           />
-          <h2><a class="instagram__link" href="#">@taraba.rs</a> речник</h2>
+          <h2>
+            <a class="instagram__link" href="https://taraba.rs/">@taraba.rs</a>
+            речник
+          </h2>
         </div>
 
         <p class="section__paragraph">
