--- a/search.html
+++ b/search.html
@@ -73,13 +73,13 @@
               <a href="index.html" class="link">Почетна</a>
             </li>
             <li>
-              <a href="search.html" class="link">Речник</a>
+              <a href="#" class="link">Речник</a>
             </li>
             <li>
-              <a href="#suggest" class="link">Предложи реч</a>
+              <a href="#" class="link">Предложи реч</a>
             </li>
             <li>
-              <a href="#about" class="link">О речнику</a>
+              <a href="#" class="link">О речнику</a>
             </li>
           </ul>
         </div>
@@ -90,7 +90,7 @@
       <section class="letter__result">
         <div class="letter__header_container">
           <h2>A</h2>
-          <p class="num-of__words">(2)</p>
+          <p class="num-of__words"></p>
         </div>
         <div class="words__container carousel__container"></div>
       </section>
